--- a/src/app/components/careers/careers.component.html
+++ b/src/app/components/careers/careers.component.html
@@ -123,9 +123,10 @@
                                   </div>
                                  
                                </div>
-                               <button type="submit" class="pagebtn f-w-B transtn-1">
+                               <!-- <button type="submit" class="pagebtn f-w-B transtn-1" [disabled]="!career.valid">
                                Book an appointment
-                               </button>
+                               </button> -->
+                               <button class="pagebtn f-w-B transtn-1" type="submit" [disabled]="!career.valid">Book an appointment</button>
                             </div>
                          </div>
                       </div>
