--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -67,7 +67,7 @@
          <div class="col">
            <ul class="list-unstyled logo-sec d-inline-flex">
              <li>
-               <div><a href="#"><img [src]="footerData.details.footerlogo" alt="footer logo" /></a></div>
+               <div><a href="/"><img [src]="footerData.details.footerlogo" alt="footer logo" /></a></div>
                <div class="social-icon">
                  <a [href]="footerData.details.facebook"><img src="./assets/images/fb.svg" alt="fb" /></a>
                  <a [href]="footerData.details.instagram"><img src="./assets/images/insta.svg" alt="insta" /></a>
