--- a/src/app/components/team-details/team-details.component.html
+++ b/src/app/components/team-details/team-details.component.html
@@ -31,7 +31,7 @@
                    <div class="bannerTxt">
                      <p [innerHTML]="content"></p>
                    </div>
-                   <ul class="list-unstyled d-flex flex-wrap mt__60 ">
+                   <ul class="list-unstyled d-flex flex-wrap mt__60 teamdetails_btn">
                       <li><a [href]="doctorsdata.details.button_1_link" class="pagebtn dc_btn_min f-w-B">{{doctorsdata.details.button_1_text}}</a></li>
                       <li>
                         <div ngbDropdown class="dropSec position-relative directList">
