--- a/src/app/components/ourservices/ourservices.component.html
+++ b/src/app/components/ourservices/ourservices.component.html
@@ -35,7 +35,7 @@
     <div class="spacer_t_60 spacer_b_60">
        <div class="main-container">
           <div class="row rowSpace" *ngIf="services">
-             <div class="col-sm-6 col-md-4" *ngFor="let data of services">
+             <div class="col-md-4" *ngFor="let data of services">
                 <div class="dc_serviceBx transtn-1 mrg-b-30">
                    <div class="dc_serviceIcon_wrap text-center">
                       <div class="servieIcon">
