--- a/src/app/components/aboutus/aboutus.component.html
+++ b/src/app/components/aboutus/aboutus.component.html
@@ -14,15 +14,6 @@
   <div class="dc_spacer_t_90 dc_spacer_b_60">
      <div class="main-container">
         <div class="row row_gutter_30">
-           
-           <div class="col-md-6 align-self-center order-md-2">
-              <div class="dc_txtSummary">
-                 <h2 class="headingSec line_H_1 mrg-b-30" [innerHTML]="heading"></h2>
-                 <div class="dc_txt_summary dc_last_p text-justify">
-                   <p [innerHTML]="content"></p>
-                 </div>
-              </div>
-           </div>
            <div class="col-md-6">
               <div class="dc_About_media_wrap">
                  <ul class="list-unstyled row row_gutter_15 dc_wrapCols_UD">
@@ -35,6 +26,14 @@
                        </div>
                     </li>
                  </ul>
+              </div>
+           </div>
+           <div class="col-md-6 align-self-center">
+              <div class="dc_txtSummary">
+                 <h2 class="headingSec line_H_1 mrg-b-30" [innerHTML]="heading"></h2>
+                 <div class="dc_txt_summary dc_last_p text-justify">
+                   <p [innerHTML]="content"></p>
+                 </div>
               </div>
            </div>
         </div>
@@ -104,16 +103,7 @@
   </div>
   <div class="dc_spacer_t_30 dc_spacer_b_30">
      <div class="main-container">
-        <div class="row row_gutter_30">           
-           <div class="col-md-6 align-self-center order-md-2">
-              <div class="dc_txtSummary">
-                 <div class="dccSubTitle f-w-B opacity-5 mrg-b-30">{{aboutData.ourmissionsection.small_heading}}</div>
-                 <h2 class="headingSec line_H_1 mrg-b-30" [innerHTML]="missionheading"></h2>
-                 <div class="dc_txt_summary dc_last_p text-justify">
-                   <p [innerHTML]="content"></p>
-                 </div>
-              </div>
-           </div>
+        <div class="row row_gutter_30">
            <div class="col-md-6">
               <div class="dc_About_media_wrap">
                  <ul class="list-unstyled row row_gutter_15 dc_wrapCols_UD">
@@ -134,6 +124,15 @@
                        </div>
                     </li>
                  </ul>
+              </div>
+           </div>
+           <div class="col-md-6 align-self-center">
+              <div class="dc_txtSummary">
+                 <div class="dccSubTitle f-w-B opacity-5 mrg-b-30">{{aboutData.ourmissionsection.small_heading}}</div>
+                 <h2 class="headingSec line_H_1 mrg-b-30" [innerHTML]="missionheading"></h2>
+                 <div class="dc_txt_summary dc_last_p text-justify">
+                   <p [innerHTML]="content"></p>
+                 </div>
               </div>
            </div>
         </div>
@@ -179,25 +178,6 @@
   <div class="dc_spacer_t_30 dc_spacer_b_30">
      <div class="main-container">
         <div class="row row_gutter_30">
-           
-           <div class="col-md-6 align-self-center order-md-2">
-              <div class="dc_txtSummary">
-                 <div class="dccSubTitle f-w-B opacity-5 mrg-b-30">{{aboutData.ourvaluessection.small_heading}}</div>
-                 <h2 class="headingSec line_H_1 mrg-b-30" [innerHTML]="valueheading"></h2>
-                 <div class="dc_txt_summary dc_last_p text-justify">
-                  <p [innerHTML]="valuecontent"></p>
-                 </div>
-                 <div class="d-flex justify-content-center">
-                    <div class="mar-80 " *ngFor="let icondata of valueicons">
-                       <div class="selfless ">
-                          <img class="w-100" [src]="icondata.image.link" [alt]="icondata.image.alt">
-                       </div>
-                       <div class="f-s-18">{{icondata.text}}</div>
-                    </div>
-                   
-                 </div>
-              </div>
-           </div>
            <div class="col-md-6">
               <div class="dc_About_media_wrap">
                  <ul class="list-unstyled row row_gutter_15 dc_wrapCols_UD">
@@ -218,6 +198,24 @@
                        </div>
                     </li>
                  </ul>
+              </div>
+           </div>
+           <div class="col-md-6 align-self-center">
+              <div class="dc_txtSummary">
+                 <div class="dccSubTitle f-w-B opacity-5 mrg-b-30">{{aboutData.ourvaluessection.small_heading}}</div>
+                 <h2 class="headingSec line_H_1 mrg-b-30" [innerHTML]="valueheading"></h2>
+                 <div class="dc_txt_summary dc_last_p text-justify">
+                  <p [innerHTML]="valuecontent"></p>
+                 </div>
+                 <div class="d-flex justify-content-center">
+                    <div class="mar-80 " *ngFor="let icondata of valueicons">
+                       <div class="selfless ">
+                          <img class="w-100" [src]="icondata.image.link" [alt]="icondata.image.alt">
+                       </div>
+                       <div class="f-s-18">{{icondata.text}}</div>
+                    </div>
+                   
+                 </div>
               </div>
            </div>
         </div>
@@ -361,16 +359,6 @@
   <div class="dc_spacer_t_30 dc_spacer_b_30">
      <div class="main-container">
         <div class="row row_gutter_30">
-           
-           <div class="col-md-6 align-self-center order-md-2">
-              <div class="dc_txtSummary">
-                 <div class="dccSubTitle f-w-B opacity-5 mrg-b-30">{{technology.small_heading}}S</div>
-                 <h2 class="headingSec line_H_1 mrg-b-30" [innerHTML]="technologyheading"></h2>
-                 <div class="dc_txt_summary dc_last_p text-justify">
-                    <p [innerHTML]="technologycontent"></p>
-                 </div>
-              </div>
-           </div>
            <div class="col-md-6">
               <div class="dc_About_media_wrap">
                  <ul class="list-unstyled row row_gutter_15 dc_wrapCols_UD">
@@ -391,6 +379,15 @@
                        </div>
                     </li>
                  </ul>
+              </div>
+           </div>
+           <div class="col-md-6 align-self-center">
+              <div class="dc_txtSummary">
+                 <div class="dccSubTitle f-w-B opacity-5 mrg-b-30">{{technology.small_heading}}S</div>
+                 <h2 class="headingSec line_H_1 mrg-b-30" [innerHTML]="technologyheading"></h2>
+                 <div class="dc_txt_summary dc_last_p text-justify">
+                    <p [innerHTML]="technologycontent"></p>
+                 </div>
               </div>
            </div>
         </div>
@@ -436,24 +433,6 @@
   <div class="dc_spacer_t_30 dc_spacer_b_30">
      <div class="main-container">
         <div class="row row_gutter_30">
-           
-           <div class="col-md-6 align-self-center order-md-2">
-              <div class="dc_txtSummary">     
-                <div class="dccSubTitle f-w-B opacity-5 mrg-b-30">{{aboutData.oursupportsections.small_heading}}</div>
-                 <h2 class="headingSec line_H_1 mrg-b-30" [innerHTML]="supportheading"></h2>
-                 <div class="dc_txt_summary dc_last_p text-justify">
-                  <p [innerHTML]="supportcontent"></p>
-                 </div>
-                 <div class="d-flex justify-content-center">
-                    <div class="mar-80 " *ngFor="let icondata of supporticon">
-                       <div class="selfless ">
-                          <img class="w-100" [src]="icondata.image.link" [alt]="icondata.image.alt">
-                       </div>
-                       <div class="f-s-18">{{icondata.text}}</div>
-                    </div>                    
-                 </div>
-              </div>
-           </div>
            <div class="col-md-6">
               <div class="dc_About_media_wrap">
                  <ul class="list-unstyled row row_gutter_15 dc_wrapCols_UD">
@@ -474,6 +453,23 @@
                        </div>
                     </li>
                  </ul>
+              </div>
+           </div>
+           <div class="col-md-6 align-self-center">
+              <div class="dc_txtSummary">     
+                <div class="dccSubTitle f-w-B opacity-5 mrg-b-30">{{aboutData.oursupportsections.small_heading}}</div>
+                 <h2 class="headingSec line_H_1 mrg-b-30" [innerHTML]="supportheading"></h2>
+                 <div class="dc_txt_summary dc_last_p text-justify">
+                  <p [innerHTML]="supportcontent"></p>
+                 </div>
+                 <div class="d-flex justify-content-center">
+                    <div class="mar-80 " *ngFor="let icondata of supporticon">
+                       <div class="selfless ">
+                          <img class="w-100" [src]="icondata.image.link" [alt]="icondata.image.alt">
+                       </div>
+                       <div class="f-s-18">{{icondata.text}}</div>
+                    </div>                    
+                 </div>
               </div>
            </div>
         </div>
